@@ -1,0 +1,9 @@
+<html>
+	<head>
+		<title><site:name /></title>
+	</head>
+	<body>
+		<h1><site:name /></h1>
+		<p>This page was made using StaticPress, version <sp:version />, on <sp:datetime />.</p>
+	</body>
+</html>
